feat: P0-P2 고도화 기능 구현
